# kaleidoscope

./: .coderabbit.yaml  .gitignore  CMakeLists.txt  README copy.md  README.ja.md  README.md  package.xml  pyproject.toml
kaleidoscope/: __init__.py  __main__.py  trajectory_clearance.py  trajectory_clearance_dialog.py  trajectory_contract.py  trajectory_editor.py  trajectory_plot.py  trajectory_preview.py  trajectory_processing.py  trajectory_speed.py
