<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_purpose_mpc_ros</name>
  <version>0.0.0</version>
  <description>The multi_purpose_mpc_ros package</description>
  <maintainer email="t.sato17123@gmail.com">Takashi Sato</maintainer>
  <maintainer email="kenta.kato.4321@gmail.com">Kenta Kato</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>multi_purpose_mpc_ros_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>osqp_vendor</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>v2x_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pandas</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
