[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aichallenge-kaleidoscope"
version = "0.1.0"
description = "Offline trajectory editor for the Automotive AI Challenge"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "defusedxml>=0.7.1",
  "PyYAML>=6.0",
]

[project.scripts]
kaleidoscope = "kaleidoscope.trajectory_editor:main"

[tool.setuptools]
packages = ["kaleidoscope"]
